[gd_scene load_steps=3 format=2]

[ext_resource path="res://MateBody.gd" type="Script" id=1]
[ext_resource path="res://MateParticle.tscn" type="PackedScene" id=2]

[node name="MateFeature" type="Node2D"]

script = ExtResource( 1 )

[node name="MateParticle" parent="." index="0" instance=ExtResource( 2 )]

lifetime = 0.5

[node name="MateTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="MateTimer" to="." method="_on_MateTimer_timeout"]


